# Indoor_navigation_bot

./: .gitignore  README.md
src/mybot_bringup/: CMakeLists.txt  package.xml
src/mybot_bringup/config/: rplidar_a1.yaml
src/mybot_bringup/launch/: navigate_real.launch.py  real_robot.launch.py  simulated_robot.launch.py
src/mybot_calibration/: package.xml  setup.cfg  setup.py
src/mybot_calibration/launch/: calibrate.launch.py  calibrate_rotation.launch.py
src/mybot_calibration/mybot_calibration/: calibration_node copy.py  calibration_node_rotation.py
src/mybot_controller/: CMakeLists.txt  package.xml
src/mybot_controller/config/: mybot_controllers.yaml
src/mybot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/mybot_controller/mybot_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
src/mybot_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
src/mybot_description/: CMakeLists.txt  package.xml
src/mybot_description/launch/: gazebo.launch.py
src/mybot_firmware/: CMakeLists.txt  mybot_interface.xml  package.xml
src/mybot_localization/: CMakeLists.txt  package.xml
src/mybot_mapping/: CMakeLists.txt  package.xml
src/mybot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/mybot_msgs/: CMakeLists.txt  package.xml
src/mybot_navigation/: CMakeLists.txt  package.xml
src/mybot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/mybot_py_examples/: package.xml  setup.cfg  setup.py
src/mybot_utils/: CMakeLists.txt  package.xml
(+42 files in other folders)
